@@ -9,6 +9,9 @@
 
 defined('_JEXEC') or die;
 
+define('FINDER_PATH_INDEXER', JPATH_ADMINISTRATOR . '/components/com_finder/helpers/indexer');
+JLoader::register('FinderIndexerHelper', FINDER_PATH_INDEXER . '/helper.php');
+
 /**
  * Suggestions model class for the Finder package.
  *
@@ -65,6 +68,7 @@ class FinderModelSuggestions extends JModelList
 		$query->from($db->quoteName('#__finder_terms') . ' AS t');
 		$query->where('t.term LIKE ' . $db->quote($db->escape($this->getState('input'), true) . '%'));
 		$query->where('t.common = 0');
+		$query->where('t.language IN (' . $db->quote($db->escape($this->getState('language'), true)) . ', ' . $db->quote('*') . ')');
 		$query->order('t.links DESC');
 		$query->order('t.weight DESC');
 
@@ -117,7 +121,11 @@ class FinderModelSuggestions extends JModelList
 
 		// Get the query input.
 		$this->setState('input', $input->request->get('q', '', 'string'));
-		$this->setState('language', $input->request->get('l', '', 'string'));
+
+		// Set the query language
+		$lang = FinderIndexerHelper::getDefaultLanguage();
+		$lang = FinderIndexerHelper::getPrimaryLanguage($lang);
+		$this->setState('language', $lang);
 
 		// Load the list state.
 		$this->setState('list.start', 0);
