@@ -28,6 +28,9 @@ $ -> Language fix or change
 26-Mar-2013 Jean-Marie Simonet
  $ Updating installation ini files: pt-BR, ckb-IQ
 
+26-Mar-2013 Michael Babker
+ # [#28972] Smart Search: suggestions are not filtered by current language
+
 25-Mar-2013 Michael Babker
  # [#30375] When state is changed in a list view it isn't changed in core_content
  # Incorrect field names used in JTableContenttype (discovered implementing unit tests)
